--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-date-range": "^1.4.4",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.11",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
