--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
-    "axios": "^1.3.6",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-date-range": "^1.4.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.0.11",
     "@types/react-slick": "^0.23.10",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
